--- a/samples/package.json
+++ b/samples/package.json
@@ -15,9 +15,10 @@
     "@google-cloud/common": "^0.20.0",
     "dialogflow": "0.6.0",
     "grpc": "^1.4.1",
+    "node-record-lpcm16": "^0.3.1",
+    "prompt": "^1.0.0",
     "pump": "^3.0.0",
     "through2": "^2.0.3",
-    "prompt": "^1.0.0",
     "uuid": "^3.3.2",
     "yargs": "^12.0.1"
   },
